- Fixed bug #43196 (array_intersect_assoc() crashes with non-array input) # Note: Same problem was with array_diff_assoc()